--- a/metadata/manifest.yml
+++ b/metadata/manifest.yml
@@ -7,7 +7,8 @@ License: ASL 2.0
 Vendor: Vert.x
 Cartridge-Version: 0.0.1
 Cartridge-Vendor: vertx
-Source-Url: https://github.com/vert-x3/vertx-openshift-cartridge.git
+#Source-Url: https://github.com/vert-x3/vertx-openshift-cartridge.git
+Source-Url: https://github.com/andreicolta/vertx-openshift-cartridge.git
 Categories:
   - service
   - web_framework
