--- a/template/configuration/vertx.env
+++ b/template/configuration/vertx.env
@@ -1,10 +1,10 @@
 #  Pass java system properties via VERTX_OPTS
 #  E.g. export VERTX_OPTS="-Dsome.prop=blah"
-export VERTX_OPTS="-javaagent:/var/lib/openshift/${OPENSHIFT_GEAR_UUID}/app-root/repo/newrelic/newrelic.jar"
+export VERTX_OPTS=" -D -Xmx2048m -XX:MaxPermSize=128m -javaagent:/var/lib/openshift/${OPENSHIFT_GEAR_UUID}/app-root/repo/newrelic/newrelic.jar"
 #  Pass application argument via APP_ARGS
 #  E.g. export RUN_ARGS="-conf ${OPENSHIFT_REPO_DIR}/config.json"
 #  If you want HAZELCAST_CLUSTERING don't remove the `-cp` value
-export RUN_ARGS="-cp $OPENSHIFT_VERTX_DIR/conf/cluster.xml:$OPENSHIFT_VERTX_DIR/conf"
+export RUN_ARGS=" -cp $OPENSHIFT_VERTX_DIR/conf/cluster.xml:$OPENSHIFT_VERTX_DIR/conf"
 
 #  To enable Hazelcast clustering
 #  (require having created the application with `-s`)
